# importizer

./: .clang_format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.adoc  ChangeLog.adoc  ChangeLog.asc  ChangeLog.md  CiMatrix.json  ClangBuildAnalyzer.ini  Example.md  FormatterSettings.psd1  GetProcCnt.cmake  HowItWorks.adoc  HowItWorks.asc  HowItWorks.md  Internals.adoc  LICENSE  README.adoc  README.asc  README.md  Roadmap.adoc
.githooks/: pre-commit
Examples/importizer/2/src2/: CMakeLists.txt  CondMinimizer.cc  FileOp.ixx  Info.md  Preprocessor.ixx  Regex.ixx
scripts/: Ci.cmake  (+13 more)
src/: ArgProcessor.cc  ArgProcessor.hpp  Base.cc  Base.hpp  CMakeLists.txt  CondMinimizer.cc  CondMinimizer.hpp  Directive.cc  Directive.hpp  Driver.cc  FileOp.cc  FileOp.hh  FileOp.hpp  GMF.cc  GMF.hpp  Lexer.cc  Lexer.hpp  Llvm.cc  Main.cc  Minimizer.cc  Minimizer.hpp  Modularizer.cc  Modularizer.hpp  OptProcessor.cc  OptProcessor.hpp  Opts.cc  Opts.hh  Opts.hpp  Preamble.cc  Preamble.hpp  Preprocessor.cc  Preprocessor.hpp  Regex.cc  Regex.hpp  StdInclude.cc  StdInclude.hpp  SysInclude.cc  SysInclude.hpp  Util.cc  Util.hh  (+1 more)
src/importizer/: CMakeLists.txt  Driver.cc  Entry.cc  Entry.hh  Main.cc  Main.hh  Opts.cc  Opts.hh  Toml.cc  Toml.hh  Util.cc  Util.hh
src/run-test/: CMakeLists.txt  CmpDir.cc  CmpDir.hh  Driver.cc  Subprocess.hh
src/test/: CMakeLists.txt  Driver.cc  Subprocess.hh
src/utils/: CMakeLists.txt  Control.cc  Control.hh  FS.hh  FileOp.cc  FileOp.hh  Log.cc  Log.hh
test/: CMakeLists.txt  CmpDir.cc  Driver.cmake  GetTmpDir.cc  README.md
test/Default/IgnoredHeader/: config.toml
test/Default/IgnoredHeader/CorrectOutput/: IgnoredHdr.cc  IncludeIgnoredHdr.cc
test/Default/IgnoredHeader/Input/: IncludeIgnoredHdr.cc
test/Default/Importizer/CorrectOutput/: CondMinimizer.cppm  Directive.ixx  FileOp.cppm  Main.cc  Preamble.ixx  Regex.cc
test/Default/Importizer/Input/: FileOp.hpp
test/Default/IncludePath/: config.toml
test/Default/IncludePath/CorrectOutput/: Header.cppm
test/Default/IncludePath/Input/: Header.hpp
test/Default/IncludePrevention/: config.toml
test/Default/IncludePrevention/CorrectOutput/: IncludeGuard.cppm  PragmaOnce.cppm
test/Default/Minimize/CorrectOutput/: Test.cc
test/Default/Minimize/Input/: Test.cc
test/Default/MinimizeCond/CorrectOutput/: Test.cc
test/Default/MinimizeCond/Input/: Test.cc
test/Default/Self/: config.toml
test/Default/Self/CorrectOutput/: CondMinimizer.cc  CondMinimizer.cppm  Directive.cc  FileOp.cc  OptProcessor.cc  OptProcessor.cppm  Preamble.cc  Regex.cc
test/Default/StdInclude2Import/: config.toml
test/Default/StdIncludeToImport/CorrectOutput/: Std.cc  StdCompat.cc
test/Default/StdIncludeToImport/Input/: StdCompat.cc
test/Default/UmbrellaHdr/: config.toml
test/Default/stdInclude2Import/: config.toml
test/Default/stdInclude2Import/CorrectOutput/: Std.cc  StdCompat.cc
test/ModeIndependent/: README.md
test/ModeIndependent/Minimizer/CorrectOutput/: LocalHdr.cppm
test/ModeIndependent/Minimizer/Input/: Test.cc
test/ModeIndependent/Preprocessor/Input/: Test.cc
test/ModeIndependent/SOFComments/CorrectOutput/: MultilineLicense.ixx  SinglelineLicense.cppm
test/ModeIndependent/SOFComments/Input/: JustLicense.hpp  MultilineLicense.hpp  SinglelineLicense.hpp
test/ModeIndependent/UmbrellaHdr/CorrectOutput/: NormalHdr.ixx  UmbrellaHdr.cppm
test/Other/Preprocessor/CorrectOutput/: Test.cc
test/Other/Preprocessor/Input/: Test.cc
test/Transitional/BackCompatHdrs/: config.toml
test/Transitional/BackCompatHdrs/CorrectOutput/: Test.cc  Test.cppm  Test.hpp
test/Transitional/IgnoredHdr/: config.toml
test/Transitional/IgnoredHdr/CorrectOutput/: IgnoredHdr.cc  IncludeIgnoredHdr.cc
test/Transitional/IgnoredHeader/: config.toml
test/Transitional/IgnoredHeader/CorrectOutput/: IgnoredHdr.cc  IncludeIgnoredHdr.cc
test/Transitional/Importizer/: config.toml
test/Transitional/Importizer/CorrectOutput/: Base.cc  Base.cppm  CondMinimizer.cc  CondMinimizer.cppm  CondMinimizer.ixx  Directive.cc  Directive.cppm  Directive.ixx  FileOp.cc  FileOp.ixx  Main.cc  OptProcessor.cc  OptProcessor.cppm  OptProcessor.ixx  Preamble.cc  Preamble.cppm  Preamble.ixx  Preprocessor.cc  Preprocessor.cppm  Preprocessor.ixx  Regex.cc  Regex.cppm
test/Transitional/IncludeGuard/: config.toml
test/Transitional/IncludePath/: config.toml
test/Transitional/IncludePath/CorrectOutput/: Header.cppm  Header.ixx
test/Transitional/IncludePrevention/: config.toml
test/Transitional/IncludePrevention/CorrectOutput/: IncludeGuard.cppm  PragmaOnce.cppm
test/Transitional/Minimize/: config.toml
test/Transitional/Minimize/CorrectOutput/: Test.cc
test/Transitional/MinimizeCond/CorrectOutput/: Test.cc
test/Transitional/PragmaOnce/: config.toml
test/Transitional/Self/: config.toml
test/Transitional/StdInclude2Import/: config.toml
test/Transitional/StdIncludeToImport/: config.toml
test/Transitional/UmbrellaHdr/: config.toml
test/Transitional/stdInclude2Import/: config.toml
test/kaldi/: include2import.toml
test/self/: include2import.toml
test/vosk/: include2import.toml
tests/: CMakeLists.txt  CmpDir.cc  Driver.cmake  Test.cc
tests/IgnoredHdr/CorrectOutput/: IgnoredHdr.cc  IncludeIgnoredHdr.cc
tests/Importizer/: README.md  config.toml
tests/Importizer/CorrectOutput/: Directive.cc  FileOp.cc  OptProcessor.ixx  Preprocessor.ixx  Regex.ixx
tests/Importizer/Input/: Base.cc  CondMinimizer.hpp  Directive.hpp  OptProcessor.hpp  Preamble.hpp  Regex.cc
tests/IncludeGuard/: config.toml
tests/IncludeGuard/CorrectOutput/: IncludeGuard.ixx
tests/IncludeGuard/Input/: IncludeGuard.hpp
tests/IncludePath/CorrectOutput/: Header.ixx
tests/Minimizer/: config.toml
tests/Minimizer/CorrectOutput/: Test.cc
tests/PragmaOnce/: config.toml
tests/PragmaOnce/CorrectOutput/: PragmaOnce.ixx
tests/SOFComments/: config.toml
tests/SOFComments/CorrectOutput/: JustLicense.ixx
tests/missing-inDir/: RefCli.txt
tests/outDir-override/: Config.toml  RefCli.txt
tests/override-outDir/: RefCli.txt
(+127 files in other folders)
